--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div style="width:600px;height;300px;background-color:pink;">
 
-<h3><strong>Ink to Link</strong></h3>
+<h3><strong>Link to Ink</strong></h3>
 
 <p>Ao contrário das impressões tradicionais, as informações associadas aos QR codes são vulneráveis à instabilidade da internet. Os <em>Dead Links</em> ou <em>Broken Links</em> são um dos principais problemas que podemos vir a encontrar ao usar um QR code. Como becos sem saída, estes links não levam os utilizadores a lado nenhum a não ser a uma fria página <em>"404 Not Found"</em>. Estas ligações interrompidas entre o papel e o digital destroem por completo o conceito do QR code de trazer às publicações físicas informação adicional.</p>
 
